fix: switch scrollbar colors from bg to base too

--- a/style/mdx.css
+++ b/style/mdx.css
@@ -1,5 +1,5 @@
 [data-rehype-pretty-code-fragment] code {
-  @apply grid min-w-full break-words rounded-2xl border-0 bg-transparent p-0 text-sm scrollbar-thin scrollbar-track-bg scrollbar-thumb-text;
+  @apply grid min-w-full break-words rounded-2xl border-0 bg-transparent p-0 text-sm scrollbar-thin scrollbar-track-base scrollbar-thumb-text;
   counter-reset: line;
   box-decoration-break: clone;
 }
